--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -1,2 +1,2 @@
 #labels Featured,Phase-Deploy
-[http://www.howtousea.com/palmnet_shoutbox Go Here!]
+=[http://www.howtousea.com/palmnet_shoutbox Go Here!]=
