Update wiki page Instructions through web user interface.

--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -1,2 +1,3 @@
 #labels Featured,Phase-Deploy
-=[http://www.howtousea.com/palmnet_shoutbox Go Here!]=
+*[http://www.howtousea.com/palmnet_shoutbox Go Here!]*
+
