--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -51,6 +51,6 @@ Click "Save Changes" and everything is done.
 ==You say done, but how do I add it to a website?==
 Post one of these, whatever is appropriate. And obviously change the site name and folder to point to the right site!
 
-HTML = <img src="http://www.sitename.com/shoutbox/image.php" />
+HTML = {{{<img src="http://www.sitename.com/shoutbox/image.php" />}}}
 
-BBCode = [IMG]http://www.sitename.com/shoutbox/image.php[/IMG]
+BBCode = {{{[IMG]http://www.sitename.com/shoutbox/image.php[/IMG]}}}
