Edited wiki page through web user interface.

--- a/wiki/HowToCHMOD.wiki
+++ b/wiki/HowToCHMOD.wiki
@@ -1,2 +1,2 @@
-#labels Phase-Implementation,Phase-Design
+#labels Phase-Implementation,Phase-Design,Phase-Requirements
 =How to CHMOD a file on a web server=
