Edited wiki page through web user interface.

--- a/wiki/DeveloperNotes.wiki
+++ b/wiki/DeveloperNotes.wiki
@@ -1,4 +1,4 @@
-#labels Phase-Implementation,Phase-Design
+#labels Phase-Implementation,Phase-Design,Phase-Customisation
 #Summary of the system from a developers point of view.
 
 = Developer Notes =
@@ -11,5 +11,4 @@ Add your content here.  Format your content with:
   * Text in *bold* or _italic_
   * Headings, paragraphs, and lists
   * Automatic links to other wiki pages
-
 
