--- a/wiki/DeveloperNotes.wiki
+++ b/wiki/DeveloperNotes.wiki
@@ -1,14 +1,120 @@
 #labels Phase-Implementation,Phase-Design,Phase-Customisation
-#Summary of the system from a developers point of view.
-
 = Developer Notes =
-Developer Notes Developer Notes
+This is a basic list of every function in the project, what it does, why it does it and what you could do with it.
+I'll also discuss some of the things I've gone through making this system
 
+== Why should I read this? ==
+You should be reading this if:
+  # You know PHP and want to learn how to use some of the code I used.
+  # You want to learn PHP.
+  # You are just plain nerdy/geeky/curious.
+Basically, if you have better things to do, do them first!
+This is pretty in-depth and will be mostly blanked out by the general public.
 
-= Details =
+== Preamble ==
+I'll list all the functions I made, then list them all again with how/what they do.
+Then after that little joy I'll list of some of the basic PHP functions I used, how and what they were used for too.
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+== Function list ==
+All functions I made are in _functions.php_
+There are also some if($_POST[]) in there, which I'll talk about later on.
+  # writetofile($content)
+  # writeconfig($content)
+  # postmsg($username,$message)
+  # isadmin($password)
+  # validpost($username,$message)
+  # editform()
+  # postform($errormessage)
+  # displayhistory($item)
+  # bool2check($booleanvalue)
+  # check2bool($checkvalue)
+  # hex2rgb($hex, $value)
+  # msgfilter($message)
+  # credits($username)
+  # geturl()
+  # geturldir()
+  # regex_timestamp_off($line)
+  # regex_timestamp_cutdown($line)
+  # regex_only_timestamp($line)
 
+=== writetofile($content) ===
+This takes whatever is passed via $content and writes it to $contentfile.
+$contentfile is a global variable taken from config.php
+This function is twice in the system. Once for adding a post via postmsg() and once when saving after editing.
+
+=== writeconfig($content) ===
+This takes whatever is passed via $content and saves it in config.php
+Only used once, in: if($_POST['editcfg']).
+
+=== postmsg($username,$message) ===
+This takes an already sanitised $username and $message, adds a timestamp to it, adds that onto the rest of the content in content.txt, and then uses writetofile() to save it.
+Only used from the post.php file.
+
+=== isadmin($password) ===
+Checks if $password that was passed to it matches the $adminpassword from the config.php
+Only used from the post.php when checking to see if it can display the edit form.
+Returns True or False.
+
+=== validpost($username,$message) ===
+Checks for empty $username or $message values.
+Any problems it finds it uses s set of ifs to return an error message.
+Only used from the post.php
+
+=== editform() ===
+This is used to return the edit form. It grabs the global variables it needs and the content.txt data and then echo's that in a nice form for easy editing.
+Only called from the post.php
+
+=== postform($errormessage) ===
+This is used to return the posting form. It concatenates the image, a possible error message passed to it with the $errormessage parameter, and the post form.
+Only called from the post.php
+
+=== displayhistory($item) ===
+This displays a nice little history of the past 5 items with links to browse back and forth between them.
+Only used from the post.php if "?item=" is specified in the URL.
+
+=== bool2check($booleanvalue) ===
+Returns "checked" if $booleanvalue = True, and "" if $booleanvalue = False.
+Used in the editform() function to check the timestamp box or not dependent upon the config.php file.
+
+=== check2bool($checkvalue) ===
+Returns True if $checkvalue= "on", and False if $checkvalue= "".
+Used in the writeconfig() to write a true or false value for the timestamps.
+
+=== hex2rgb($hex, $value) ===
+Returns the 0-255 RGB values of $hex dependent upon the $value.
+$value can be set to "r", "g" and "b". If left blank it returns all three comma seperated.
+Used once in image.php for allocating the colour of the font.
+
+=== msgfilter($message) ===
+Will return a nice, clean, version of whatever was passed to it via $message.
+It strips all non-allowed characters with the first 2 lines of code.
+Then it corrects foolish, common, typos.
+And then it Places a {{{*}}} for every letter of a word in the $not_very_nice array apart from the first and last character.
+This final, clean data, is then capitalised and returned to the user.
+Used twice when it gets the values for the username and message from the $_POST[] variables.
+
+=== credits($username) ===
+This returns the credits for the shoutbox system, and a message to thank the user passed to it via $username.
+Used once in post.php
+
+=== geturl() ===
+Returns the full URL of the document that uses this function.
+This function was used in the rss.php, but no longer is.
+However I left it in for those of you who may need the code. Trust me, it's a handy one to have about!
+
+=== geturldir() ===
+This returns the path the to document that called it.
+Used by the displayhistory() function and index.php rss.php
+
+=== regex_timestamp_off($line) ===
+Fully removes the timestamp from $line for 0.5, 0.5.X and 1.0 content items.
+Done using a regular expression.
+Used in image.php and rss.php
+
+=== regex_timestamp_cutdown($line) ===
+Returns a nice, small timestamp and message from the $line parameter. Works with 0.5, 0.5.X and 1.0 content items.
+Used in image.php and rss.php
+
+=== regex_only_timestamp($line) ===
+Removes all but the timestamp from $line.
+Used in rss.php for the <pubDate></pubDate>
