--- a/wiki/HowToCustomise.wiki
+++ b/wiki/HowToCustomise.wiki
@@ -6,11 +6,58 @@ You will need an image editor, a popular free one is [http://www.gimp.org/ The G
 ==Guide: 1 - Basic custom==
 This bit of the guide will let you know how to tweak the shoutbox and some of the stuff included you might not know about.
 
-===Editing the standard image===
-To edit the standard image I'd suggest using a tool like The Gimp as it can handle .png format images with layers and transparencies nicely. I'll be using Adobe Fireworks 8 for the screen shots though.
+===Open the shoutbox_source.png from the design folder===
+Use your image editor (Fireworks here) to open the "shoutbox_source.png" file located in the design folder of the shoutbox.
+http://shoutbox.palmnet.me.uk/guide_resources/open.jpg
 
+===Edit the image (notice some layers there already to help)===
+Now we need to edit the image. I'll be making a horrifyingly bad shoutbox for demonstration purposes only.
+Notice I have made some "tabs" but put them as hidden layers for you:
+
+http://shoutbox.palmnet.me.uk/guide_resources/layers.jpg
+
+So here is my one, after customising:
+
+http://shoutbox.palmnet.me.uk/guide_resources/customised.jpg
+
+===Save the whole thing as a .jpg===
+We need to now save this base image of the shoutbox. The system currently only takes jpeg files, so save it as a .jpg:
+http://shoutbox.palmnet.me.uk/guide_resources/saving.jpg
+
+===Cut out and crop the to area you want the shoutbox bit to be in===
+We then flatten all the layers so make one single image, or you can close the shoutbox_source.png and open the jpeg to get the flattened layers.
+Once flattened select the region you want the shoutbox area to be in:
+http://shoutbox.palmnet.me.uk/guide_resources/make%20reigion.jpg
+
+Note down the X and Y values of this area, and then crop the document to that area:
+
+http://shoutbox.palmnet.me.uk/guide_resources/cropped.jpg
+
+Save this as a jpeg too:
+http://shoutbox.palmnet.me.uk/guide_resources/saving2.jpg
+
+===Upload to the internet===
+Upload the files to the internet, they can be anywhere, but for this I'm going to write over the old ones in the design folder. I'm using fireFTP by the way:
+http://shoutbox.palmnet.me.uk/guide_resources/upload.jpg
+
+===Edit the shoutbox setting===
+Go into the admin settings of the shoutbox:
+
+http://shoutbox.palmnet.me.uk/guide_resources/settings.jpg
+
+Look at the area with the orange border. This is the area we have to tinker with.
+If you uploaded to anywhere other than over the old file then you need to edit the values in the blue border to wherever the new file is. E.g. "http://www.imagesite.com/myfolder/shoutbox.jpg"
+If you overwrote the old files move on to the green area.
+This needs to be the same X and Y values from when we selected the area earlier.
+
+===Save settings and you're done!===
 
 ==Guide: 2 - Fully custom==
 This bit of the guide will let you know how to tweak the shoutbox and some of the stuff included you might not know about.
 
 ===Creating a new image===
+
+
+
+
+
