--- a/wiki/DeveloperNotes.wiki
+++ b/wiki/DeveloperNotes.wiki
@@ -13,7 +13,7 @@ This is pretty in-depth and will be mostly blanked out by the general public.
 
 == Preamble ==
 I'll list all the functions I made, then list them all again with how/what they do.
-Then after that little joy I'll list of some of the basic PHP functions I used, how and what they were used for too.
+Then after that little joy I'll list of some of the basic PHP functions I used, how and what they were used for too along with some commentary on bits of code scattered through the source.
 
 == Function list ==
 All functions I made are in _functions.php_
@@ -118,3 +118,63 @@ Used in image.php and rss.php
 === regex_only_timestamp($line) ===
 Removes all but the timestamp from $line.
 Used in rss.php for the <pubDate></pubDate>
+
+
+==Other snippets of code==
+Well I've come to this bit and given up the will to live after all that up there!
+So I'll keep this short and sweet:
+
+===The image rendering code:===
+{{{
+header('Cache-Control: no-cache, must-revalidate');
+header('Pragma: no-cache');
+}}}
+Those two lines mean the browser wont cache the images. Thus meaning that when you hit refresh it grabs the latest, shouted upon image.
+
+{{{
+$y = (floor(imagesy($image)/imagefontheight(2)) * imagefontheight(2)) - imagefontheight(2);
+}}}
+This is the largest amount of full lines we can squeeze in vertically on the image.
+{{{
+imagefontheight(2)
+}}}
+Is the hieght of the font I'm using, which is number 2.
+
+{{{
+$text = wordwrap($lines[$i], floor((imagesx($image)-12)/imagefontwidth(2)), "\n ", 1);
+	$text = explode("\n", $text);
+}}}
+This splits the lines into chunks of text that can fit in the width of the shoutbox without being cut in half
+
+===The RSS generating code:===
+{{{
+header("Content-type: text/xml");
+}}}
+RSS is just an XML file, so we make the header output to this format.
+
+{{{
+<guid isPermaLink=\"true\">" . geturldir() . "index.php?guid=" . (count($lines) - $i) . "&amp;count=" . count($lines) . "</guid>
+}}}
+The GUID tag has to be a unique tag for every item. I did this wrong the first time, but this one is truely unique.
+And I include 'count=' to save me some time and code in the post.php
+
+===The Post.php file:===
+This was originally just for posting, but since times gone by all that has been moved to functions, and this is just kept round for old times sake.
+The code could be copied and pasted over where it is included in index.php, but I feel keeping it separate makes things easier to understand.
+
+{{{
+}elseif($HTTP_GET_VARS['item'] >= 0 && is_numeric($HTTP_GET_VARS['item'])){ //If they want to see an item
+	echo displayhistory($HTTP_GET_VARS['item']); //Show them the specified item
+}elseif($HTTP_GET_VARS['guid'] >= 0 && is_numeric($HTTP_GET_VARS['guid'])){ //If they get here from the guid tag
+	echo displayhistory(($HTTP_GET_VARS['count'])-($HTTP_GET_VARS['guid'])); //Show them the specified item
+}}
+These two bits of code are part of the 'big if' that is post.php
+They basically both return the shoutbox history, but one works from ?itme=* and the other works from the guid tag's ?guid=*&count=*
+
+===The config.php file:===
+This is basically a variable store that can be included anywhere.
+The variables cannot be accessed through functions, thats why the functions in functions.php often have
+{{{
+global $varname, $var2name;
+}}}
+At the top. This needs to be done for all variables outside of the functions that are to be used inside the function.
